--- a/Assignement 11/A11-Supervised_Machine_Learning_Part1-Practice.ipynb
+++ b/Assignement 11/A11-Supervised_Machine_Learning_Part1-Practice.ipynb
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
        "      dtype='<U10')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,6 +1151,26 @@
     "\n",
     "# Let's see the predictions\n",
     "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(Yv, predictions)"
    ]
   },
   {
@@ -1329,13 +1349,6 @@
     "cr = classification_report(Yv, predictions)\n",
     "print(cr)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
